--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">59</td>
+            <td class="headerCovTableEntry">67</td>
             <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntryMed">77.6 %</td>
+            <td class="headerCovTableEntryMed">88.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-17 21:56:04</td>
+            <td class="headerValue">2023-05-18 10:39:37</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">15</td>
+            <td class="headerCovTableEntry">16</td>
             <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryMed">78.9 %</td>
+            <td class="headerCovTableEntryMed">84.2 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">25</td>
+            <td class="headerCovTableEntry">28</td>
             <td class="headerCovTableEntry">40</td>
-            <td class="headerCovTableEntryLo">62.5 %</td>
+            <td class="headerCovTableEntryLo">70.0 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -178,14 +178,14 @@
 <a name="107"><span class="lineNum">     107 </span>                :            : </a>
 <a name="108"><span class="lineNum">     108 </span>                :            :     /// @notice Pays the validator for fees / revenue sharing that is collected outside of submitFlashBid function</a>
 <a name="109"><span class="lineNum">     109 </span>                :            :     function payValidatorFee(address _payor) external payable nonReentrant {</a>
-<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">          3 :         _payValidatorFee(_payor);</span></a>
+<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">          6 :         _payValidatorFee(_payor);</span></a>
 <a name="111"><span class="lineNum">     111 </span>                :            :     }</a>
 <a name="112"><span class="lineNum">     112 </span>                :            : </a>
 <a name="113"><span class="lineNum">     113 </span>                :            :     function _payValidatorFee(address _payor) internal {</a>
-<a name="114"><span class="lineNum">     114 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 3 times"> + </span>]:<span class="lineCov">          3 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
-<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">          3 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
-<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">          3 :         validatorsTotal += msg.value;</span></a>
-<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">          3 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
+<a name="114"><span class="lineNum">     114 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 5 times"> + </span>]:<span class="lineCov">          6 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
+<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">          5 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
+<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">          5 :         validatorsTotal += msg.value;</span></a>
+<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">          5 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
 <a name="118"><span class="lineNum">     118 </span>                :            :     }</a>
 <a name="119"><span class="lineNum">     119 </span>                :            : </a>
 <a name="120"><span class="lineNum">     120 </span>                :            :     /// @notice Submits a SIMULATED flash bid. THE HTTP RELAY won't accept calls for this function.</a>
@@ -261,18 +261,18 @@
 <a name="190"><span class="lineNum">     190 </span>                :            :         onlyActiveValidators</a>
 <a name="191"><span class="lineNum">     191 </span>                :            :         nonReentrant</a>
 <a name="192"><span class="lineNum">     192 </span>                :            :     {</a>
-<a name="193"><span class="lineNum">     193 </span>                :<span class="lineNoCov">          0 :         uint256 _expectedBalance = validatorsTotal;</span></a>
-<a name="194"><span class="lineNum">     194 </span>                :<span class="lineNoCov">          0 :         uint256 _currentBalance = address(this).balance;</span></a>
-<a name="195"><span class="lineNum">     195 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchNoExec" title="Branch 1 was not executed"> # </span>]:<span class="lineNoCov">          0 :         if (_currentBalance &gt;= _expectedBalance) {</span></a>
+<a name="193"><span class="lineNum">     193 </span>                :<span class="lineCov">          2 :         uint256 _expectedBalance = validatorsTotal;</span></a>
+<a name="194"><span class="lineNum">     194 </span>                :<span class="lineCov">          2 :         uint256 _currentBalance = address(this).balance;</span></a>
+<a name="195"><span class="lineNum">     195 </span>        [<span class="branchCov" title="Branch 0 was taken 2 times"> + </span><span class="branchCov" title="Branch 1 was taken 2 times"> + </span>]:<span class="lineCov">          2 :         if (_currentBalance &gt;= _expectedBalance) {</span></a>
 <a name="196"><span class="lineNum">     196 </span>                :            : </a>
-<a name="197"><span class="lineNum">     197 </span>                :<span class="lineNoCov">          0 :             address _validator = getValidator();</span></a>
+<a name="197"><span class="lineNum">     197 </span>                :<span class="lineCov">          2 :             address _validator = getValidator();</span></a>
 <a name="198"><span class="lineNum">     198 </span>                :            : </a>
-<a name="199"><span class="lineNum">     199 </span>                :<span class="lineNoCov">          0 :             uint256 _surplus = _currentBalance - _expectedBalance;</span></a>
+<a name="199"><span class="lineNum">     199 </span>                :<span class="lineCov">          2 :             uint256 _surplus = _currentBalance - _expectedBalance;</span></a>
 <a name="200"><span class="lineNum">     200 </span>                :            : </a>
-<a name="201"><span class="lineNum">     201 </span>                :<span class="lineNoCov">          0 :             validatorsBalanceMap[_validator] += _surplus;</span></a>
-<a name="202"><span class="lineNum">     202 </span>                :<span class="lineNoCov">          0 :             validatorsTotal += _surplus;</span></a>
+<a name="201"><span class="lineNum">     201 </span>                :<span class="lineCov">          2 :             validatorsBalanceMap[_validator] += _surplus;</span></a>
+<a name="202"><span class="lineNum">     202 </span>                :<span class="lineCov">          2 :             validatorsTotal += _surplus;</span></a>
 <a name="203"><span class="lineNum">     203 </span>                :            : </a>
-<a name="204"><span class="lineNum">     204 </span>                :<span class="lineNoCov">          0 :             emit RelayWithdrawStuckNativeToken(_validator, _surplus);</span></a>
+<a name="204"><span class="lineNum">     204 </span>                :<span class="lineCov">          2 :             emit RelayWithdrawStuckNativeToken(_validator, _surplus);</span></a>
 <a name="205"><span class="lineNum">     205 </span>                :            :         }</a>
 <a name="206"><span class="lineNum">     206 </span>                :            :     }</a>
 <a name="207"><span class="lineNum">     207 </span>                :            : </a>
@@ -362,7 +362,7 @@
 <a name="291"><span class="lineNum">     291 </span>                :            : </a>
 <a name="292"><span class="lineNum">     292 </span>                :            :     /// @notice Returns validator pending balance</a>
 <a name="293"><span class="lineNum">     293 </span>                :            :     function getValidatorBalance(address _validator) public view returns (uint256 _validatorBalance) {</a>
-<a name="294"><span class="lineNum">     294 </span>                :<span class="lineCov">          1 :         _validatorBalance = validatorsBalanceMap[_validator];</span></a>
+<a name="294"><span class="lineNum">     294 </span>                :<span class="lineCov">          5 :         _validatorBalance = validatorsBalanceMap[_validator];</span></a>
 <a name="295"><span class="lineNum">     295 </span>                :            :     }</a>
 <a name="296"><span class="lineNum">     296 </span>                :            : </a>
 <a name="297"><span class="lineNum">     297 </span>                :            :     /// @notice Returns the listed payee address regardless of whether or not it has passed the time lock.</a>
@@ -378,8 +378,8 @@
 <a name="307"><span class="lineNum">     307 </span>                :            :     }</a>
 <a name="308"><span class="lineNum">     308 </span>                :            : </a>
 <a name="309"><span class="lineNum">     309 </span>                :            :     function getValidator() internal view returns (address) {</a>
-<a name="310"><span class="lineNum">     310 </span>        [<span class="branchCov" title="Branch 0 was taken 7 times"> + </span><span class="branchCov" title="Branch 1 was taken 3 times"> + </span>]:<span class="lineCov">         10 :         if (validatorsBalanceMap[msg.sender] &gt; 0) {</span></a>
-<a name="311"><span class="lineNum">     311 </span>                :<span class="lineCov">          7 :             return msg.sender;</span></a>
+<a name="310"><span class="lineNum">     310 </span>        [<span class="branchCov" title="Branch 0 was taken 9 times"> + </span><span class="branchCov" title="Branch 1 was taken 3 times"> + </span>]:<span class="lineCov">         12 :         if (validatorsBalanceMap[msg.sender] &gt; 0) {</span></a>
+<a name="311"><span class="lineNum">     311 </span>                :<span class="lineCov">          9 :             return msg.sender;</span></a>
 <a name="312"><span class="lineNum">     312 </span>                :            :         }</a>
 <a name="313"><span class="lineNum">     313 </span>        [<span class="branchCov" title="Branch 0 was taken 3 times"> + </span><span class="branchNoExec" title="Branch 1 was not executed"> # </span>]:<span class="lineCov">          3 :         if (payeeMap[msg.sender] != address(0)) {</span></a>
 <a name="314"><span class="lineNum">     314 </span>                :<span class="lineCov">          3 :             return payeeMap[msg.sender];</span></a>
