--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func-sort-c.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func-sort-c.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">67</td>
+            <td class="headerCovTableEntry">72</td>
             <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntryMed">88.2 %</td>
+            <td class="headerCovTableEntryHi">94.7 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 10:39:37</td>
+            <td class="headerValue">2023-05-18 13:13:03</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">16</td>
+            <td class="headerCovTableEntry">17</td>
             <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryMed">84.2 %</td>
+            <td class="headerCovTableEntryMed">89.5 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">28</td>
+            <td class="headerCovTableEntry">30</td>
             <td class="headerCovTableEntry">40</td>
-            <td class="headerCovTableEntryLo">70.0 %</td>
+            <td class="headerCovTableEntryMed">75.0 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -74,10 +74,6 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#303">FastLaneAuctionHandler.getValidatorRecipient</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#209">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
@@ -105,6 +101,10 @@
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#209">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
               <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#162">FastLaneAuctionHandler._handleBalances</a></td>
               <td class="coverFnHi">4</td>
             </tr>
@@ -117,19 +117,19 @@
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#111">FastLaneAuctionHandler._payValidatorFee</a></td>
-              <td class="coverFnHi">6</td>
-            </tr>
-    <tr>
               <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#230">FastLaneAuctionHandler.collectFees</a></td>
               <td class="coverFnHi">6</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#107">FastLaneAuctionHandler.payValidatorFee</a></td>
-              <td class="coverFnHi">6</td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#111">FastLaneAuctionHandler._payValidatorFee</a></td>
+              <td class="coverFnHi">8</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#296">FastLaneAuctionHandler.getValidatorPayee</a></td>
+              <td class="coverFnHi">8</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#107">FastLaneAuctionHandler.payValidatorFee</a></td>
               <td class="coverFnHi">8</td>
             </tr>
     <tr>
