--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">67</td>
+            <td class="headerCovTableEntry">72</td>
             <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntryMed">88.2 %</td>
+            <td class="headerCovTableEntryHi">94.7 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 10:39:37</td>
+            <td class="headerValue">2023-05-18 13:13:03</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">16</td>
+            <td class="headerCovTableEntry">17</td>
             <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryMed">84.2 %</td>
+            <td class="headerCovTableEntryMed">89.5 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">28</td>
+            <td class="headerCovTableEntry">30</td>
             <td class="headerCovTableEntry">40</td>
-            <td class="headerCovTableEntryLo">70.0 %</td>
+            <td class="headerCovTableEntryMed">75.0 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -178,14 +178,14 @@
 <a name="107"><span class="lineNum">     107 </span>                :            : </a>
 <a name="108"><span class="lineNum">     108 </span>                :            :     /// @notice Pays the validator for fees / revenue sharing that is collected outside of submitFlashBid function</a>
 <a name="109"><span class="lineNum">     109 </span>                :            :     function payValidatorFee(address _payor) external payable nonReentrant {</a>
-<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">          6 :         _payValidatorFee(_payor);</span></a>
+<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">          8 :         _payValidatorFee(_payor);</span></a>
 <a name="111"><span class="lineNum">     111 </span>                :            :     }</a>
 <a name="112"><span class="lineNum">     112 </span>                :            : </a>
 <a name="113"><span class="lineNum">     113 </span>                :            :     function _payValidatorFee(address _payor) internal {</a>
-<a name="114"><span class="lineNum">     114 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 5 times"> + </span>]:<span class="lineCov">          6 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
-<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">          5 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
-<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">          5 :         validatorsTotal += msg.value;</span></a>
-<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">          5 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
+<a name="114"><span class="lineNum">     114 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          8 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
+<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">          7 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
+<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">          7 :         validatorsTotal += msg.value;</span></a>
+<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">          7 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
 <a name="118"><span class="lineNum">     118 </span>                :            :     }</a>
 <a name="119"><span class="lineNum">     119 </span>                :            : </a>
 <a name="120"><span class="lineNum">     120 </span>                :            :     /// @notice Submits a SIMULATED flash bid. THE HTTP RELAY won't accept calls for this function.</a>
@@ -285,12 +285,12 @@
 <a name="214"><span class="lineNum">     214 </span>                :            :         nonReentrant</a>
 <a name="215"><span class="lineNum">     215 </span>                :            :     {</a>
 <a name="216"><span class="lineNum">     216 </span>                :            :         // TODO: handle wMATIC differently</a>
-<a name="217"><span class="lineNum">     217 </span>                :<span class="lineNoCov">          0 :         ERC20 oopsToken = ERC20(_tokenAddress);</span></a>
-<a name="218"><span class="lineNum">     218 </span>                :<span class="lineNoCov">          0 :         uint256 oopsTokenBalance = oopsToken.balanceOf(address(this));</span></a>
+<a name="217"><span class="lineNum">     217 </span>                :<span class="lineCov">          2 :         ERC20 oopsToken = ERC20(_tokenAddress);</span></a>
+<a name="218"><span class="lineNum">     218 </span>                :<span class="lineCov">          2 :         uint256 oopsTokenBalance = oopsToken.balanceOf(address(this));</span></a>
 <a name="219"><span class="lineNum">     219 </span>                :            : </a>
-<a name="220"><span class="lineNum">     220 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchNoExec" title="Branch 1 was not executed"> # </span>]:<span class="lineNoCov">          0 :         if (oopsTokenBalance &gt; 0) {</span></a>
-<a name="221"><span class="lineNum">     221 </span>                :<span class="lineNoCov">          0 :             SafeTransferLib.safeTransferFrom(oopsToken, address(this), msg.sender, oopsTokenBalance);</span></a>
-<a name="222"><span class="lineNum">     222 </span>                :<span class="lineNoCov">          0 :             emit RelayWithdrawStuckERC20(address(this), msg.sender, oopsTokenBalance);</span></a>
+<a name="220"><span class="lineNum">     220 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 2 times"> + </span>]:<span class="lineCov">          2 :         if (oopsTokenBalance &gt; 0) {</span></a>
+<a name="221"><span class="lineNum">     221 </span>                :<span class="lineCov">          1 :             SafeTransferLib.safeTransfer(oopsToken, msg.sender, oopsTokenBalance);</span></a>
+<a name="222"><span class="lineNum">     222 </span>                :<span class="lineCov">          1 :             emit RelayWithdrawStuckERC20(address(this), msg.sender, oopsTokenBalance);</span></a>
 <a name="223"><span class="lineNum">     223 </span>                :            :         }</a>
 <a name="224"><span class="lineNum">     224 </span>                :            :     }</a>
 <a name="225"><span class="lineNum">     225 </span>                :            : </a>
