--- a/report/contracts/auction-handler/index.html
+++ b/report/contracts/auction-handler/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">67</td>
+            <td class="headerCovTableEntry">72</td>
             <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntryMed">88.2 %</td>
+            <td class="headerCovTableEntryHi">94.7 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 10:39:37</td>
+            <td class="headerValue">2023-05-18 13:13:03</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">16</td>
+            <td class="headerCovTableEntry">17</td>
             <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryMed">84.2 %</td>
+            <td class="headerCovTableEntryMed">89.5 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">28</td>
+            <td class="headerCovTableEntry">30</td>
             <td class="headerCovTableEntry">40</td>
-            <td class="headerCovTableEntryLo">70.0 %</td>
+            <td class="headerCovTableEntryMed">75.0 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,14 @@
     <tr>
       <td class="coverFile"><a href="FastLaneAuctionHandler.sol.gcov.html">FastLaneAuctionHandler.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../amber.png" width=88 height=10 alt="88.2%"><img src="../../snow.png" width=12 height=10 alt="88.2%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../emerald.png" width=95 height=10 alt="94.7%"><img src="../../snow.png" width=5 height=10 alt="94.7%"></td></tr></table>
       </td>
-      <td class="coverPerMed">88.2&nbsp;%</td>
-      <td class="coverNumMed">67 / 76</td>
-      <td class="coverPerMed">84.2&nbsp;%</td>
-      <td class="coverNumMed">16 / 19</td>
-      <td class="coverPerLo">70.0&nbsp;%</td>
-      <td class="coverNumLo">28 / 40</td>
+      <td class="coverPerHi">94.7&nbsp;%</td>
+      <td class="coverNumHi">72 / 76</td>
+      <td class="coverPerMed">89.5&nbsp;%</td>
+      <td class="coverNumMed">17 / 19</td>
+      <td class="coverPerMed">75.0&nbsp;%</td>
+      <td class="coverNumMed">30 / 40</td>
     </tr>
   </table>
   </center>
