--- a/report/index.html
+++ b/report/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">280</td>
+            <td class="headerCovTableEntry">285</td>
             <td class="headerCovTableEntry">434</td>
-            <td class="headerCovTableEntryLo">64.5 %</td>
+            <td class="headerCovTableEntryLo">65.7 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 10:39:37</td>
+            <td class="headerValue">2023-05-18 13:13:03</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">70</td>
+            <td class="headerCovTableEntry">71</td>
             <td class="headerCovTableEntry">99</td>
-            <td class="headerCovTableEntryLo">70.7 %</td>
+            <td class="headerCovTableEntryLo">71.7 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">109</td>
+            <td class="headerCovTableEntry">111</td>
             <td class="headerCovTableEntry">182</td>
-            <td class="headerCovTableEntryLo">59.9 %</td>
+            <td class="headerCovTableEntryLo">61.0 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -96,14 +96,14 @@
     <tr>
       <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=88 height=10 alt="88.2%"><img src="snow.png" width=12 height=10 alt="88.2%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=95 height=10 alt="94.7%"><img src="snow.png" width=5 height=10 alt="94.7%"></td></tr></table>
       </td>
-      <td class="coverPerMed">88.2&nbsp;%</td>
-      <td class="coverNumMed">67 / 76</td>
-      <td class="coverPerMed">84.2&nbsp;%</td>
-      <td class="coverNumMed">16 / 19</td>
-      <td class="coverPerLo">70.0&nbsp;%</td>
-      <td class="coverNumLo">28 / 40</td>
+      <td class="coverPerHi">94.7&nbsp;%</td>
+      <td class="coverNumHi">72 / 76</td>
+      <td class="coverPerMed">89.5&nbsp;%</td>
+      <td class="coverNumMed">17 / 19</td>
+      <td class="coverPerMed">75.0&nbsp;%</td>
+      <td class="coverNumMed">30 / 40</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/helpers/index.html">contracts/helpers</a></td>
